Anonymous | Login | 2019-02-19 21:00 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030486 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-02-07 15:50 | 2019-02-16 11:48 | ||||||||
Reporter | ski | ||||||||||||
Assigned To | apn | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | verified | Resolution | fixed | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.4.0* | ||||||||||||
Target Version | [OCCT] 7.4.0* | Fixed in Version | |||||||||||
Summary | 0030486: Visualization - Rubber-band selection does not work with disabled overlap detection | ||||||||||||
Description | It is impossible to select attached shape using rubber-band (rectangle) selection in case of disabled overlap detection. This is a regression since 0029938. | ||||||||||||
Steps To Reproduce | pload XDE VISUALIZATION testreadstep c:/work/compound.stp c vclear;vinit View1 vsetdispmode 1 vdisplay c vfit vzoom 0.25 vselect 0 0 400 400 * Load and display attached shape 'compound.stp' * Hold Alt and try to select shape using rectangle selection with disabled overlap detection functionality. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | Not needed | ||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
||||||
|
![]() |
|
(0082111) git (administrator) 2019-02-09 01:43 |
Branch CR30486 has been created by kgv. SHA-1: 3e9d779b02b7b0908ee7cc21afd9f15c7cb19adf Detailed log of new commits: Author: kgv Date: Sat Feb 9 01:38:28 2019 +0300 0030486: Visualization - Rubber-band selection does not work with disabled overlap detection SelectMgr_RectangularFrustum::Overlaps() now treats degenerated polygon as point instead of returning FALSE. |
(0082112) kgv (developer) 2019-02-09 01:45 |
Patch is ready for review. |
(0082170) osa (developer) 2019-02-13 14:27 |
Branch CR30486 is reviewed without remarks. |
(0082181) apn (administrator) 2019-02-14 16:35 |
OCCT branch CR30486 was tested with IR-WEEK7. Combination - OCCT branch : IR-WEEK7 master SHA - 1ccc1371b97227ae546f586e710e61f48d1a5353 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : IR-WEEK7 SHA - aa8c19a87ec380c51a0864b1f3808ee6a48d4f40 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16531.74000000004 / 16545.53999999999 [-0.08%] Products Total CPU difference: 9082.45000000002 / 9061.810000000012 [+0.23%] Windows-64-VC14: OCCT Total CPU difference: 17948.90625 / 17918.46875 [+0.17%] Products Total CPU difference: 10463.71875 / 10465.109375 [-0.01%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
![]() |
|||
occt: master 1ccc1371
Timestamp: 2019-02-08 22:38:28 Author: kgv Committer: apn [ Details ] [ Diff ] |
0030486: Visualization - Rubber-band selection does not work with disabled overlap detection SelectMgr_RectangularFrustum::Overlaps() now treats degenerated polygon as point instead of returning FALSE. |
||
mod - src/SelectMgr/SelectMgr_RectangularFrustum.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-02-07 15:50 | ski | New Issue | |
2019-02-07 15:50 | ski | Assigned To | => kgv |
2019-02-07 15:50 | ski | File Added: compound.stp | |
2019-02-07 16:16 | kgv | Product Version | => 7.4.0* |
2019-02-07 16:37 | kgv | Steps to Reproduce Updated | View Revisions |
2019-02-09 01:22 | kgv | Relationship added | child of 0029938 |
2019-02-09 01:43 | git | Note Added: 0082111 | |
2019-02-09 01:45 | kgv | Note Added: 0082112 | |
2019-02-09 01:45 | kgv | Assigned To | kgv => san |
2019-02-09 01:45 | kgv | Status | new => resolved |
2019-02-09 01:45 | kgv | Description Updated | View Revisions |
2019-02-13 11:45 | kgv | Assigned To | san => osa |
2019-02-13 14:27 | osa | Note Added: 0082170 | |
2019-02-13 14:27 | osa | Assigned To | osa => bugmaster |
2019-02-13 14:27 | osa | Status | resolved => reviewed |
2019-02-14 16:35 | apn | Test case number | => Not needed |
2019-02-14 16:35 | apn | Note Added: 0082181 | |
2019-02-14 16:35 | apn | Status | reviewed => tested |
2019-02-16 11:48 | apn | Changeset attached | => occt master 1ccc1371 |
2019-02-16 11:48 | apn | Assigned To | bugmaster => apn |
2019-02-16 11:48 | apn | Status | tested => verified |
2019-02-16 11:48 | apn | Resolution | open => fixed |
Copyright © 2000 - 2019 MantisBT Team |