0030486: Visualization - Rubber-band selection does not work with disabled overlap detection

SelectMgr_RectangularFrustum::Overlaps() now treats degenerated polygon as point instead of returning FALSE.